--- a/package.json
+++ b/package.json
@@ -20,12 +20,16 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.7.1",
     "sequelize": "^6.6.5"
   },
   "devDependencies": {
+    "axios": "^0.21.4",
+    "form-data": "^4.0.0",
+    "multer": "^1.4.3",
     "nodemon": "^2.0.12",
     "sequelize-cli": "^6.2.0"
   }
